[package]
name = "oops_my_phone_died_freeotp"
version = "1.0.0"
authors = ["Trish"]
edition = "2018"
license = "AGPL-3.0"

description = "A CLI program to print TOTP codes from freeotp-backup.json"
repository = "https://github.com/ReactorScram/oops_my_phone_died_freeotp"
readme = "README.md"
keywords = ["freeotp", "totp"]
categories = ["command-line-utilities"]

exclude = [
	"README.md",
]

[dependencies]
base32 = "0.4.0"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
totp-lite = "1.0.3"
